@@ -269,6 +269,7 @@ private:
 	USECODE_INTRINSIC_DECL(sprite_effect);
 	USECODE_INTRINSIC_DECL(explode);
 	USECODE_INTRINSIC_DECL(book_mode);
+	USECODE_INTRINSIC_DECL(stop_time);
 	USECODE_INTRINSIC_DECL(cause_light);
 	USECODE_INTRINSIC_DECL(get_barge);
 	USECODE_INTRINSIC_DECL(earthquake);
